# winclip

./: .gitignore  README.md  pyproject.toml
clip2tex/: clipboard.py  extern_call.py
demo/: __init__.py  print_clipboard_on_change.py  texclip.py
tests/: test_clip2tex.py  test_clipboard.py
winclip/: __init__.py  clipboard.py
wincliphost/: __init__.py
