[tool.poetry]
name = "clip2tex"
version = "0.1.0"
description = ""
authors = ["zombie110year <zombie110year@outlook.com>"]
packages = [
    { include = "winclip" }
]

[tool.poetry.dependencies]
python = "^3.7"
pywin32 = "^225.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
win10toast = "^0.9.0"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
